--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,1 +1,35 @@
-<p>header works!</p>
+<mat-toolbar class="header-wrp">
+    <div class="header">
+        <div class="header-content left-area">
+            <div class="header-content title" [routerLink]="['/']">
+                <img src="/assets/logo/logo.svg" />
+                InfoShop
+            </div>
+        </div>
+        <div class="header-content main-area">
+            <p routerLink="/" routerLinkActive="active" #link="routerLinkActive"
+                [class.disabled]="!link.isActive">
+                Social
+            </p>
+        </div>
+        <div class="header-content right-area">
+            <div [matMenuTriggerFor]="menu" class="user-area">
+                <span>User Name</span>
+                <img src="/assets/header/chevron-down-icon.svg" />
+                <mat-menu class="user-menu" #menu="matMenu" xPosition="before">
+
+                    <button [routerLink]="['/']" mat-menu-item class="menu-element">
+                        <img class="menu-icon" src="/assets/header/lock-icon.svg" />
+                        <span class="menu-text">Change Password</span>
+                    </button>
+
+                    <button mat-menu-item class="menu-element">
+                        <img class="menu-icon" src="/assets/header/log-out.svg" alt="logOut" />
+                        <span class="menu-text">Log Out</span>
+                    </button>
+
+                </mat-menu>
+            </div>
+        </div>
+    </div>
+</mat-toolbar>
