--- a/frontend/src/app/modules/main/main-page/main-page.component.sass
+++ b/frontend/src/app/modules/main/main-page/main-page.component.sass
@@ -1,2 +1,14 @@
 .main-content-wrp
     width: 100%
+    margin-top: 60px
+
+.main-content-body
+    display: flex
+    flex-direction: columns
+    width: 100%
+
+.market-list-wrp
+    max-width: 55%
+
+.connections-list-wrp
+    min-width: 45%
