--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -3,7 +3,7 @@
         <div class="header-content left-area">
             <div class="header-content title" [routerLink]="['/']">
                 <img src="/assets/logo/logo.svg" />
-                InfoShop
+                Market ISP info
             </div>
         </div>
         <div class="header-content main-area">
