--- a/frontend/src/app/modules/main/main-page/main-page.component.sass
+++ b/frontend/src/app/modules/main/main-page/main-page.component.sass
@@ -1,14 +1,22 @@
 .main-content-wrp
     width: 100%
     margin-top: 60px
+    height: calc( 100vh - 60px )
 
 .main-content-body
     display: flex
-    flex-direction: columns
+    flex-direction: row
     width: 100%
+    height: 100%
+    margin: 10px
 
 .market-list-wrp
-    max-width: 55%
+    width: 42%
+    height: 100%
+    overflow: scroll
+    
 
 .connections-list-wrp
-    min-width: 45%
+    width: 58%
+    display: flex
+    flex-direction: row
