Add connection interface, service; create market detail component

--- a/frontend/src/app/modules/main/main-page/main-page.component.html
+++ b/frontend/src/app/modules/main/main-page/main-page.component.html
@@ -5,8 +5,13 @@
         <div class="market-list-wrp">
             <app-markets-list></app-markets-list>
         </div>
-        <div class="connections-list-wrp">
-            <app-connections-list></app-connections-list>
+        <div class="market-full-info-wrp">
+            <div class="market-details-wrp">
+                <app-market-details></app-market-details>
+            </div>
+            <div class="connections-list-wrp">
+                <app-connections-list></app-connections-list>
+            </div>
         </div>
     </div>
 </div>
