--- a/frontend/src/app/modules/market/market-card/market-card.component.html
+++ b/frontend/src/app/modules/market/market-card/market-card.component.html
@@ -1,4 +1,4 @@
-<div class="market-card-wrp">
+<div class="market-card-wrp" (click)="openDetail()" >
     <div class="market-name-section">
         <div class="market-name">
             <span>
