--- a/frontend/src/app/modules/main/main-page/main-page.component.sass
+++ b/frontend/src/app/modules/main/main-page/main-page.component.sass
@@ -1,22 +1,37 @@
 .main-content-wrp
+    display: flex
+    justify-content: center
     width: 100%
-    margin-top: 60px
+    margin-top: 65px
     height: calc( 100vh - 60px )
 
 .main-content-body
     display: flex
     flex-direction: row
-    width: 100%
-    height: 100%
+    width: 1400px
+    height: calc( 100% - 20px )
     margin: 10px
 
 .market-list-wrp
-    width: 42%
+    min-width: 350px
     height: 100%
     overflow: scroll
-    
 
-.connections-list-wrp
-    width: 58%
+@media screen and (max-width: 700px)
+    .market-list-wrp
+        min-width: 50%
+
+.market-full-info-wrp
+    width: calc( 100% - 350px )
     display: flex
-    flex-direction: row
+    flex-direction: column
+    border-radius: 7px
+    background-color: pink
+    margin-top: 7px
+
+@media screen and (max-width: 700px)
+    .market-full-info-wrp
+        min-width: 50%
+
+.market-details-wrp
+    width: 100%
