--- a/frontend/src/app/modules/main/main-page/main-page.component.sass
+++ b/frontend/src/app/modules/main/main-page/main-page.component.sass
@@ -26,7 +26,7 @@
     display: flex
     flex-direction: column
     border-radius: 7px
-    background-color: pink
+    background-color: #f0f0f0
     margin-top: 7px
 
 @media screen and (max-width: 700px)
