--- a/frontend/src/app/modules/market/market-details/market-details.component.sass
+++ b/frontend/src/app/modules/market/market-details/market-details.component.sass
@@ -1,14 +1,38 @@
 .market-full-details
     display: flex
-    flex-direction: row
-    width: 100%
+    flex-direction: column
+    width: calc( 100% - 20px )
+    height: 140px
     margin: 10px
 
+.market-name-section
 
 .market-name span
     font-size: 20px
     font-weight: bold
-    color: #333333
+
+.market-address
+     color: #646464
 
 .market-region span
     font-size: 12px
+    font-weight: bold
+    color: #333333
+    margin-left: 20px
+
+.market-other-details-wrp
+    display: flex
+    flex-direction: column
+    margin-top: 15px
+    width: 100%
+    
+
+.market-some-info-record
+    display: flex
+    box-shadow: 0px 2px 2px -2px
+    margin-top: 10px
+    width: 100%
+
+.info-record-title
+    width: 170px
+    font-weight: bold
