--- a/frontend/src/app/modules/market/market-card/market-card.component.html
+++ b/frontend/src/app/modules/market/market-card/market-card.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="market-region">
             <span>
-                (Ivano-Frankivsk region)
+                ({{this.regionsList[this.market.region]}} область)
             </span>
         </div>
     </div>
