--- a/frontend/src/app/modules/market/market-details/market-details.component.html
+++ b/frontend/src/app/modules/market/market-details/market-details.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="market-region">
             <span>
-                (Ivano-Frankivsk region)
+                ({{this.regionsList[this.marketHelper.currentMarket.region]}} область)
             </span>
         </div>
     </div>
