--- a/frontend/src/app/shared/components/header/header.component.sass
+++ b/frontend/src/app/shared/components/header/header.component.sass
@@ -2,14 +2,19 @@
     position: fixed
     top: 0
     background: white
-    color: gray
+    color: white
     padding: 0
     box-shadow: 0 2px 4px 2px rgba(71, 83, 108, 0.06)
     box-sizing: border-box
+    border-radius: 0px 0px 10px 10px
+    background-color: #686868
     width: 100%
     height: 60px
     z-index: 1000
 
+@media screen and (max-width: 1600px)
+    .header-wrp
+        width: 100%
     
 .header
     display: flex
@@ -20,7 +25,6 @@
 
 .header-content
     display: flex
-    width: 33%
     flex-direction: row
     align-items: center
     height: 100%
